--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0-alpha",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/your-username/your-repository-name.git"
+    "url": "https://github.com/sohaibaljarih/boxvault.git"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
